--- a/Audio.settings
+++ b/Audio.settings
@@ -1,5 +1,5 @@
 {
-    "m_MasterVolume": 1.0,
+    "m_MasterVolume": 0.14999999105930329,
     "m_EffectsVolume": 1.0,
     "m_AmbienceVolume": 1.0,
     "m_MusicVolume": 1.0
